--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
 baseURL = 'http://hugo-quickstart-template.netlify.com'
 languageCode = 'en-us'
-title = 'Netlify + Hugo Quickstart'
+title = 'Bhuikhel youth club'
 theme = 'netlify-basic'
