--- a/config.toml
+++ b/config.toml
@@ -2,3 +2,10 @@ baseURL = 'http://hugo-quickstart-template.netlify.com'
 languageCode = 'en-us'
 title = 'Bhuikhel youth club'
 theme = 'netlify-basic'
+
+[blackfriday]
+   plainIDAnchors = true
+   hrefTargetBlank = true
+
+[markup.goldmark.renderer]
+    unsafe= true
